# MCP-FirstSteps

./: README.md  llama_index_tut.md  tutorial.md  tutorial_ollama.md  tutorial_ollama_de.md
mix_server/: README.md  client.py  generate_parquet.py  main.py  pyproject.toml  server.py
mix_server/tools/: csv_tools.py  parquet_tools.py
mix_server/utils/: file_reader.py
