[project]
name = "mix-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.12.47",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-tools-mcp>=0.2.6",
    "mcp[cli]>=1.10.1",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
]
